--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -45,7 +45,7 @@ a:focus {
     padding-bottom: 50px;
     text-align: center;
     /*color: #f8f8f8;*/
-    background: url(../img/intro-bg.png) no-repeat center center;
+    background: url(../docs/assets/img/intro-bg.png) no-repeat center center;
     background-size: cover;
 }
 
@@ -124,7 +124,7 @@ a:focus {
 .banner {
     padding: 100px 0;
     /*color: #f8f8f8;*/
-    background: url(../img/banner-bg.png) no-repeat center center;
+    background: url(../docs/assets/img/banner-bg.png) no-repeat center center;
     background-size: cover;
 }
 
