--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -9,7 +9,7 @@ html {
     width: 100%;
     height: 100%;
     background-color: #333333;
-    color: #d0d0d0;
+    color: #F0F0F0;
 }
 
 body,
@@ -31,6 +31,35 @@ a:focus {
     color: #2a9664;
 }
 
+.navbar-default .navbar-brand {
+    color: #42ca8b;
+  }
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+    color: #F0F0F0;
+    background-color: #42ca8b;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #F0F0F0;
+}
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #2a9664;
+  background-color: transparent;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #2a9664;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #333333;
+}
+
 .lead {
     font-size: 18px;
     font-weight: 400;
@@ -38,6 +67,10 @@ a:focus {
 
 .navbar {
     background-color: #333333;
+}
+
+.navbar-default {
+    border-color: #42ca8b;
 }
 
 .intro-header {
